--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
+        <div></div>
 
         <!--* Home *-->
         <header class="home-general">
